--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,10 @@
 		<link rel="stylesheet" href="assets/css/educational-design-system.css" />
 		<link rel="stylesheet" href="assets/css/educational-overrides.css" />
 		<link rel="stylesheet" href="assets/css/hero-section.css" />
+		<link rel="stylesheet" href="assets/css/dropdown-nav.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 		<style>
+			#titleBar, #navPanel { display: none !important; }
 			/* Blog-specific styles */
 			.blog-hero {
 				background: linear-gradient(135deg, var(--color-primary-blue) 0%, var(--color-secondary-teal) 100%);
@@ -21,9 +23,19 @@
 				text-align: center;
 			}
 			
+			.blog-hero .edu-container {
+				display: flex !important;
+				flex-direction: column !important;
+				align-items: center !important;
+				justify-content: center !important;
+				text-align: center !important;
+			}
+			
 			.blog-hero h1 {
 				font-size: clamp(2rem, 5vw, 3.5rem);
 				margin-bottom: var(--space-4);
+				color: white !important;
+				text-align: center !important;
 			}
 			
 			.blog-hero p {
@@ -31,6 +43,74 @@
 				opacity: 0.9;
 				max-width: 600px;
 				margin: 0 auto;
+				color: white !important;
+				text-align: center !important;
+			}
+			
+			/* Study Guide Section Styles */
+			.study-guide-section {
+				padding: var(--space-8) 0;
+				background: transparent;
+			}
+			
+			.study-guide-section header h2 {
+				color: #1e40af !important;
+				font-size: 2.5em !important;
+				margin-bottom: 0.5em !important;
+				text-align: center !important;
+			}
+			
+			.study-guide-section header p {
+				color: #6b7280 !important;
+				font-size: 1.2em !important;
+				max-width: 600px !important;
+				margin: 0 auto !important;
+				text-align: center !important;
+			}
+			
+			.guide-card {
+				background: white;
+				border: 1px solid #e5e7eb;
+				border-radius: 15px;
+				padding: 2.5em;
+				box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+				transition: transform 0.3s ease, box-shadow 0.3s ease;
+				text-align: center;
+			}
+			
+			.guide-card:hover {
+				transform: translateY(-5px);
+				box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+			}
+			
+			.guide-card h3 {
+				color: #1e40af !important;
+				font-size: 1.8em !important;
+				margin-bottom: 1em !important;
+			}
+			
+			.guide-card p {
+				color: #374151 !important;
+				font-size: 1.1em !important;
+				line-height: 1.6 !important;
+				margin-bottom: 1.5em !important;
+			}
+			
+			.guide-download {
+				display: inline-flex;
+				align-items: center;
+				gap: 0.5em;
+				background: #1e40af;
+				color: white;
+				padding: 0.75em 1.5em;
+				border-radius: 8px;
+				text-decoration: none;
+				font-weight: 500;
+				transition: background 0.3s ease;
+			}
+			
+			.guide-download:hover {
+				background: #1e3a8a;
 			}
 			
 			.blog-filters {
@@ -232,32 +312,198 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<section id="header">
-				<div class="header-container" style="display: flex; align-items: center; justify-content: space-between; padding: 0 5%;">
-					<!-- Logo -->
-					<div class="logo">
-						<a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 120px;"></a>
-					</div>
+			        <section id="header">
+            <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
+                <!-- Logo -->
+                <div class="logo">
+                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                </div>
 
-					<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="features.html">Mathematics Roadmap</a></li>
-							<li><a href="resources.html">Resources</a></li>
-							<li class="current"><a href="blog.html">Blog</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
+                <!-- Main Navigation -->
+                <nav id="nav">
+                    <ul>
+                        <li class=""><a href="index.html">Home</a></li>
+                        
+                        <!-- Subjects Dropdown -->
+                        <li class="has-dropdown">
+                            <a href="features.html">Subjects</a>
+                            <div class="dropdown subjects-dropdown">
+                                <div class="subjects-container">
+                                    <div class="subjects-grid">
+                                    <a href="topics/algebra/linear-and-quadratic-equations.html" class="subject-item">
+                                        <i class="fas fa-calculator"></i>
+                                        <span>Algebra</span>
+                                    </a>
+                                    <a href="topics/geometry/euclidean-geometry.html" class="subject-item">
+                                        <i class="fas fa-shapes"></i>
+                                        <span>Geometry</span>
+                                    </a>
+                                    <a href="topics/calculus/differentiation.html" class="subject-item">
+                                        <i class="fas fa-chart-line"></i>
+                                        <span>Calculus</span>
+                                    </a>
+                                    <a href="topics/trigonometry/trigonometric-identities-and-formulas.html" class="subject-item">
+                                        <i class="fas fa-wave-square"></i>
+                                        <span>Trigonometry</span>
+                                    </a>
+                                    <a href="topics/statistics/descriptive-statistics.html" class="subject-item">
+                                        <i class="fas fa-chart-bar"></i>
+                                        <span>Statistics</span>
+                                    </a>
+                                    <a href="topics/complex-numbers/basic-operations.html" class="subject-item">
+                                        <i class="fas fa-infinity"></i>
+                                        <span>Complex Numbers</span>
+                                    </a>
+                                    <a href="topics/matrices-and-determinants/matrix-operations.html" class="subject-item">
+                                        <i class="fas fa-th"></i>
+                                        <span>Matrices</span>
+                                    </a>
+                                    <a href="topics/number-theory/divisibility-and-prime-numbers.html" class="subject-item">
+                                        <i class="fas fa-hashtag"></i>
+                                        <span>Number Theory</span>
+                                    </a>
+                                    <a href="topics/probability/basic-probability-rules.html" class="subject-item">
+                                        <i class="fas fa-dice"></i>
+                                        <span>Probability</span>
+                                    </a>
+                                    <a href="topics/sequences-and-series/arithmetic-and-geometric-sequences.html" class="subject-item">
+                                        <i class="fas fa-list-ol"></i>
+                                        <span>Sequences & Series</span>
+                                    </a>
+                                    <a href="topics/graph-theory/graph-representation.html" class="subject-item">
+                                        <i class="fas fa-project-diagram"></i>
+                                        <span>Graph Theory</span>
+                                    </a>
+                                    <a href="topics/combinatorics/counting-principles.html" class="subject-item">
+                                        <i class="fas fa-cubes"></i>
+                                        <span>Combinatorics</span>
+                                    </a>
+                                    <a href="topics/inequalities/am-gm-inequality.html" class="subject-item">
+                                        <i class="fas fa-not-equal"></i>
+                                        <span>Inequalities</span>
+                                    </a>
+                                    <a href="topics/logic-and-set-theory/basic-set-operations.html" class="subject-item">
+                                        <i class="fas fa-circle-notch"></i>
+                                        <span>Logic & Set Theory</span>
+                                    </a>
+                                    <a href="topics/vectors-and-coordinate-geometry/vector-operations.html" class="subject-item">
+                                        <i class="fas fa-arrows-alt"></i>
+                                        <span>Vectors</span>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <!-- Exam Prep Dropdown -->
+                        <li class="has-dropdown">
+                            <a href="exam-prep.html">Exam Prep</a>
+                            <div class="dropdown">
+                                <div class="dropdown-grid">
+                                    <a href="quizz.html" class="dropdown-item">
+                                        <i class="fas fa-clipboard-check"></i>
+                                        <span>Practice Tests</span>
+                                    </a>
+                                    <a href="exam-prep.html#solutions" class="dropdown-item">
+                                        <i class="fas fa-lightbulb"></i>
+                                        <span>Test Solutions</span>
+                                    </a>
+                                    <a href="exam-prep.html#sat" class="dropdown-item">
+                                        <i class="fas fa-graduation-cap"></i>
+                                        <span>SAT Math</span>
+                                    </a>
+                                    <a href="tutoring.html" class="dropdown-item">
+                                        <i class="fas fa-user-graduate"></i>
+                                        <span>1-on-1 Tutoring</span>
+                                    </a>
+                                    <a href="exam-prep.html#olympiad" class="dropdown-item">
+                                        <i class="fas fa-trophy"></i>
+                                        <span>Math Olympiad</span>
+                                    </a>
+                                    <a href="exam-prep.html#ap" class="dropdown-item">
+                                        <i class="fas fa-medal"></i>
+                                        <span>AP Calculus</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <!-- Grades Dropdown -->
+                        <li class="has-dropdown">
+                            <a href="grades.html">Grades</a>
+                            <div class="dropdown">
+                                <div class="dropdown-grid">
+                                    <a href="grades.html#elementary" class="dropdown-item">
+                                        <i class="fas fa-child"></i>
+                                        <span>Elementary School</span>
+                                    </a>
+                                    <a href="grades.html#middle" class="dropdown-item">
+                                        <i class="fas fa-school"></i>
+                                        <span>Middle School</span>
+                                    </a>
+                                    <a href="grades.html#high" class="dropdown-item">
+                                        <i class="fas fa-university"></i>
+                                        <span>High School</span>
+                                    </a>
+                                    <a href="grades.html#college" class="dropdown-item">
+                                        <i class="fas fa-graduation-cap"></i>
+                                        <span>College</span>
+                                    </a>
+                                    <a href="grades.html#adult" class="dropdown-item">
+                                        <i class="fas fa-user-tie"></i>
+                                        <span>Adult Learning</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <!-- Company Dropdown -->
+                        <li class="has-dropdown">
+                            <a href="company.html">Company</a>
+                            <div class="dropdown">
+                                <div class="dropdown-grid">
+                                    <a href="about.html" class="dropdown-item">
+                                        <i class="fas fa-info-circle"></i>
+                                        <span>About</span>
+                                    </a>
+                                    <a href="company.html#careers" class="dropdown-item">
+                                        <i class="fas fa-briefcase"></i>
+                                        <span>Careers</span>
+                                    </a>
+                                    <a href="contact.html" class="dropdown-item">
+                                        <i class="fas fa-envelope"></i>
+                                        <span>Contact</span>
+                                    </a>
+                                    <a href="company.html#team" class="dropdown-item">
+                                        <i class="fas fa-users"></i>
+                                        <span>Our Team</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <!-- Blog Button -->
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
+                </nav>
+
+                <!-- Call-to-Action Buttons -->
+                <div class="nav-cta-container">
+                    <a href="tel:+14153367764" class="nav-phone">
+                        <i class="fas fa-phone"></i>
+                        +1 (415) 336-7764
+                    </a>
+                    <a href="tutoring.html" class="nav-cta-btn">Find Your Tutor</a>
+                    <a href="contact.html" class="nav-login">Log In</a>
+                </div>
+            </div>
+        </section>
 
 			<!-- Blog Hero Section -->
 			<section class="blog-hero">
 				<div class="edu-container">
-					<h1>Math Resources & Study Guides</h1>
-					<p>Expert tips, comprehensive study guides, and practice problems to help you master mathematics at every level.</p>
+					<h1 style="color: white !important; text-align: center !important; font-size: 3.5em; margin-bottom: 0.5em;">Math Resources & Study Guides</h1>
+					<p style="color: white !important; text-align: center !important; font-size: 1.3em; max-width: 800px; margin: 0 auto 2em; line-height: 1.6;">Expert tips, comprehensive study guides, and practice problems to help you master mathematics at every level.</p>
 				</div>
 			</section>
 
@@ -384,8 +630,8 @@
 			<section class="study-guide-section">
 				<div class="edu-container">
 					<header class="text-center mb-6">
-						<h2>Downloadable Study Guides</h2>
-						<p class="text-secondary">Comprehensive study materials to help you excel in your math studies</p>
+						<h2 style="color: #1e40af !important; font-size: 2.5em; margin-bottom: 0.5em;">Downloadable Study Guides</h2>
+						<p style="color: #6b7280 !important; font-size: 1.2em; max-width: 600px; margin: 0 auto;">Comprehensive study materials to help you excel in your math studies</p>
 					</header>
 					
 					<div class="edu-grid edu-grid-3">
@@ -395,8 +641,8 @@
 									<path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z" fill="var(--color-primary-blue)"/>
 								</svg>
 							</div>
-							<h3>Algebra Fundamentals</h3>
-							<p>Complete guide covering linear equations, quadratic functions, polynomials, and systems of equations with practice problems.</p>
+							<h3 style="color: #1e40af !important;">Algebra Fundamentals</h3>
+							<p style="color: #374151 !important;">Complete guide covering linear equations, quadratic functions, polynomials, and systems of equations with practice problems.</p>
 							<a href="#" class="guide-download">
 								<svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3" stroke="currentColor" stroke-width="2" fill="none"/>
@@ -412,8 +658,8 @@
 									<path d="M8 12l3 3 5-5" stroke="var(--color-secondary-teal)" stroke-width="2" fill="none"/>
 								</svg>
 							</div>
-							<h3>Geometry Mastery</h3>
-							<p>Comprehensive coverage of Euclidean geometry, area calculations, volume formulas, and geometric transformations.</p>
+							<h3 style="color: #1e40af !important;">Geometry Mastery</h3>
+							<p style="color: #374151 !important;">Comprehensive coverage of Euclidean geometry, area calculations, volume formulas, and geometric transformations.</p>
 							<a href="#" class="guide-download">
 								<svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3" stroke="currentColor" stroke-width="2" fill="none"/>
@@ -428,8 +674,8 @@
 									<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5" stroke="var(--color-accent-orange)" stroke-width="2" fill="none"/>
 								</svg>
 							</div>
-							<h3>Calculus Essentials</h3>
-							<p>Step-by-step guide through limits, derivatives, integrals, and applications with real-world examples and practice problems.</p>
+							<h3 style="color: #1e40af !important;">Calculus Essentials</h3>
+							<p style="color: #374151 !important;">Step-by-step guide through limits, derivatives, integrals, and applications with real-world examples and practice problems.</p>
 							<a href="#" class="guide-download">
 								<svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3" stroke="currentColor" stroke-width="2" fill="none"/>
@@ -455,7 +701,7 @@
 						<h4>Services</h4>
 						<ul>
 							<li><a href="tutoring.html">Online Tutoring</a></li>
-							<li><a href="resources.html">Study Resources</a></li>
+							                            <li><a href="exam-prep.html">Learning Resources</a></li>
 							<li><a href="quizz.html">Practice Tests</a></li>
 							<li><a href="vids.html">Video Tutorials</a></li>
 						</ul>
