--- a/index.html
+++ b/index.html
@@ -338,9 +338,8 @@
 						</div>
 						
 						<div class="hero-visual">
-						<div class="hero-image-container">
-							<img src="images/children.png" alt="Children learning" style="width:100%; max-width:500px; height:auto; border-radius: 12px; box-shadow: 0 15px 40px rgba(0,0,0,0.15);" />
-							<div class="education-illustration" style="display:none;">
+							<div class="mongolian-vertical" aria-hidden="true">ᠣᠯᠠᠨ ᠤᠯᠤᠰ ᠤ᠋ᠨ ᠮᠠᠲ᠋ᠧᠮᠠᠲ᠋ᠢᠭ ᠤ᠋ᠨ ᠲᠥᠪ</div>
+							<div class="hero-image-container" style="display:none;">
 									<svg width="500" height="400" viewBox="0 0 500 400" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<defs>
 											<!-- Enhanced gradients -->
