--- a/company.html
+++ b/company.html
@@ -742,7 +742,7 @@
                             <div class="team-member">
                                 <div class="avatar">K</div>
                                 <h4>Khas-Ochir Bayarjargal</h4>
-                                <div class="role">Founder & CEO</div>
+                                <div class="role">Founder</div>
                                 <p style="color: #374151 !important;">Mathematician with 5 years of experience teaching mathematics. Passionate about making quality math education accessible to all students.</p>
                             </div>
                         </div>
