Replace about.html links with company.html and remove Live Chat from contact

--- a/grades.html
+++ b/grades.html
@@ -597,7 +597,7 @@
                             <a href="company.html">About Us</a>
                             <div class="dropdown">
                                 <div class="dropdown-grid">
-                                    <a href="about.html" class="dropdown-item">
+                                    <a href="company.html" class="dropdown-item">
                                         <i class="fas fa-info-circle"></i>
                                         <span>About</span>
                                     </a>
@@ -823,7 +823,7 @@
                     <h4>Support</h4>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="company.html">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
