--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 						<h2 class="section-title">About International Math Hub</h2>
 					</header>
 					<p>
-						We serve Mongolian students worldwide with rigorous, caring instruction. Our tutors adapt lessons to the curriculum students already follow—AP, California middle school standards, IB, or other international programs—so they earn better grades, deepen curiosity, and build confidence. We also incorporate Mongolian culture into examples and projects to help students stay connected to their roots wherever they live. <a href="about.html" class="highlight-link">Learn more</a>.
+						We serve Mongolian students worldwide with rigorous, caring instruction. Our tutors adapt lessons to the curriculum students already follow—AP, California middle school standards, IB, or other international programs—so they earn better grades, deepen curiosity, and build confidence. We also incorporate Mongolian culture into examples and projects to help students stay connected to their roots wherever they live. <a href="company.html" class="highlight-link">Learn more</a>.
 					</p>
 				</div>
 			</section>
