--- a/math-courses.html
+++ b/math-courses.html
@@ -494,7 +494,7 @@
                     <h4>Support</h4>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="company.html">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
