--- a/contact.html
+++ b/contact.html
@@ -525,9 +525,9 @@
                 <div class="footer-bottom-content">
                     <div class="footer-legal">
                         <ul>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Cookie Policy</a></li>
+                            <li><a href="terms.html">Terms of Service</a></li>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="cookies.html">Cookie Policy</a></li>
                         </ul>
                     </div>
                     <div class="footer-copyright">
