Fix: replace remaining about.html links with company.html (footer, blog dropdown)

--- a/blog.html
+++ b/blog.html
@@ -411,7 +411,7 @@
                             <a href="company.html">About Us</a>
                             <div class="dropdown">
                                 <div class="dropdown-grid">
-                                    <a href="about.html" class="dropdown-item">
+                                    <a href="company.html#about" class="dropdown-item">
                                         <i class="fas fa-info-circle"></i>
                                         <span>About</span>
                                     </a>
