Update legal pages with user-provided policies (Last updated: Aug 18, 2025)

--- a/cookies.html
+++ b/cookies.html
@@ -32,19 +32,23 @@
             <div class="edu-container">
                 <header class="text-center mb-6">
                     <h1>Cookie Policy</h1>
-                    <p class="text-secondary">Effective date: January 1, 2025</p>
+                    <p class="text-secondary">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
-                    <h3>What Are Cookies?</h3>
-                    <p>Cookies are small text files stored on your device to remember preferences and improve site functionality.</p>
-                    <h3>How We Use Cookies</h3>
-                    <p>We use essential cookies for core functionality and basic analytics to understand site usage and improve content.</p>
-                    <h3>Managing Cookies</h3>
-                    <p>You can control cookies in your browser settings. Disabling some cookies may affect site functionality.</p>
-                    <h3>Third‑Party Cookies</h3>
-                    <p>Some features may rely on third‑party services which set their own cookies. We aim to limit these where possible.</p>
-                    <h3>Contact</h3>
-                    <p>Questions about this policy? Email us at imathhub@gmail.com.</p>
+                    <h3>1. What Are Cookies?</h3>
+                    <p>Cookies are small text files placed on your device to help us provide a better user experience.</p>
+                    <h3>2. How We Use Cookies</h3>
+                    <ul>
+                        <li><strong>Essential cookies:</strong> ensure the website functions properly.</li>
+                        <li><strong>Analytics cookies:</strong> help us understand traffic and improve services.</li>
+                        <li><strong>Preference cookies:</strong> remember settings (e.g., language).</li>
+                    </ul>
+                    <h3>3. Managing Cookies</h3>
+                    <p>You can manage or disable cookies in your browser settings. Disabling some cookies may affect certain features.</p>
+                    <h3>4. Third‑Party Cookies</h3>
+                    <p>We may use trusted third‑party services such as analytics providers. These providers may set their own cookies.</p>
+                    <h3>5. Contact</h3>
+                    <p>Questions? Email us at imathhub@gmail.com.</p>
                 </div>
             </div>
         </section>
