--- a/terms.html
+++ b/terms.html
@@ -31,28 +31,45 @@
         <section class="edu-section">
             <div class="edu-container">
                 <header class="text-center mb-6">
-                    <h1>Terms of Service</h1>
-                    <p class="text-secondary">Effective date: January 1, 2025</p>
+                    <h1>Terms &amp; Conditions</h1>
+                    <p class="text-secondary">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
-                    <h3>1. Overview</h3>
-                    <p>These Terms govern your use of International Math Hub’s website, content, and services. By accessing or using the site, you agree to these Terms.</p>
-                    <h3>2. Services</h3>
-                    <p>We provide educational content and tutoring services. We may update or modify offerings at any time.</p>
-                    <h3>3. User Responsibilities</h3>
-                    <p>You agree to use the site lawfully, respect intellectual property, and avoid misuse (including attempts to disrupt service).</p>
-                    <h3>4. Payments and Cancellations</h3>
-                    <p>Where applicable, session fees and cancellations follow the policy communicated at booking time.</p>
-                    <h3>5. Intellectual Property</h3>
-                    <p>All site content is owned by International Math Hub or its licensors. You may not reproduce or distribute without permission.</p>
-                    <h3>6. Disclaimers</h3>
-                    <p>Content is provided “as is”. We do not guarantee outcomes, grade improvements, or exam results.</p>
-                    <h3>7. Limitation of Liability</h3>
-                    <p>To the fullest extent permitted by law, we are not liable for indirect or consequential damages arising from site use.</p>
-                    <h3>8. Changes to Terms</h3>
-                    <p>We may update these Terms. Continued use constitutes acceptance of changes.</p>
-                    <h3>9. Contact</h3>
-                    <p>Questions? Email us at imathhub@gmail.com.</p>
+                    <p>Welcome to <strong>International Math Hub</strong> (“we,” “our,” or “us”). By accessing or using our website at <a href="https://imathhub.vercel.app">imathhub.vercel.app</a>, you agree to these Terms &amp; Conditions. Please read them carefully.</p>
+
+                    <h3>1. Use of Our Website</h3>
+                    <ul>
+                        <li>Our website provides educational resources, math content, and tutoring services.</li>
+                        <li>You agree to use our services only for lawful purposes and in compliance with all applicable laws.</li>
+                        <li>You may not copy, redistribute, or commercially exploit our materials without permission.</li>
+                    </ul>
+
+                    <h3>2. Accounts &amp; Registration</h3>
+                    <ul>
+                        <li>Some features (such as quizzes or tutoring sessions) may require registration.</li>
+                        <li>You are responsible for maintaining the confidentiality of your account information.</li>
+                    </ul>
+
+                    <h3>3. Tutoring &amp; Educational Services</h3>
+                    <ul>
+                        <li>Tutoring sessions are intended for educational purposes only.</li>
+                        <li>We do not guarantee specific academic outcomes or exam results.</li>
+                    </ul>
+
+                    <h3>4. Intellectual Property</h3>
+                    <ul>
+                        <li>All content, including videos, quizzes, problem sets, and articles, is the intellectual property of International Math Hub unless otherwise credited.</li>
+                        <li>You may use our resources for personal, non-commercial learning.</li>
+                    </ul>
+
+                    <h3>5. Limitation of Liability</h3>
+                    <p>We strive to provide accurate resources, but we do not guarantee completeness or error-free content. We are not liable for any losses, damages, or academic outcomes arising from use of the website.</p>
+
+                    <h3>6. Modifications</h3>
+                    <p>We may update these Terms at any time. Changes will be posted with a new “Last updated” date.</p>
+
+                    <h3>7. Governing Law</h3>
+                    <p>These Terms are governed by the laws of the State of California, USA, unless otherwise required by applicable law.</p>
                 </div>
             </div>
         </section>
