--- a/privacy.html
+++ b/privacy.html
@@ -32,24 +32,31 @@
             <div class="edu-container">
                 <header class="text-center mb-6">
                     <h1>Privacy Policy</h1>
-                    <p class="text-secondary">Effective date: January 1, 2025</p>
+                    <p class="text-secondary">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
-                    <h3>Information We Collect</h3>
-                    <p>We collect information you provide (name, email, message content) when you contact us, and limited technical data (e.g., basic analytics) to improve the site.</p>
-                    <h3>How We Use Information</h3>
-                    <p>To respond to inquiries, deliver tutoring services, improve our content, and communicate updates.</p>
-                    <h3>Sharing</h3>
-                    <p>We do not sell your personal information. We may share with service providers strictly to operate the site (e.g., form processing) under confidentiality obligations.</p>
-                    <h3>Data Retention</h3>
-                    <p>We retain information only as long as necessary to provide services and meet legal obligations.</p>
-                    <h3>Security</h3>
-                    <p>We use reasonable safeguards to protect data, but no method of transmission or storage is 100% secure.</p>
-                    <h3>Your Rights</h3>
-                    <p>Contact us to access, correct, or delete your information, subject to applicable law.</p>
-                    <h3>Changes</h3>
+                    <h3>1. Information We Collect</h3>
+                    <ul>
+                        <li><strong>Directly from you:</strong> name, email, and details you provide when signing up or contacting us.</li>
+                        <li><strong>Automatically:</strong> IP address, browser type, and usage data via cookies.</li>
+                    </ul>
+                    <h3>2. How We Use Your Information</h3>
+                    <ul>
+                        <li>To provide educational content and tutoring services.</li>
+                        <li>To improve our platform and personalize your learning experience.</li>
+                        <li>To send updates or reminders (you can opt out anytime).</li>
+                    </ul>
+                    <h3>3. Sharing of Information</h3>
+                    <p>We do not sell your personal data. We may share information with trusted third-party service providers (e.g., hosting, analytics, or payment processors) only as necessary to operate our services.</p>
+                    <h3>4. Data Protection</h3>
+                    <p>We use reasonable security measures to protect your data. However, no method of transmission or storage is 100% secure.</p>
+                    <h3>5. Your Rights</h3>
+                    <p>Depending on your location (e.g., GDPR, CCPA), you may have rights to access, update, delete, or request a copy of your personal data, and opt out of certain processing. Contact us to exercise your rights.</p>
+                    <h3>6. Children’s Privacy</h3>
+                    <p>Our services are intended for students with parental consent if under 13. We do not knowingly collect personal data from children under 13 without consent.</p>
+                    <h3>7. Changes</h3>
                     <p>We may update this Policy. Continued use indicates acceptance of changes.</p>
-                    <h3>Contact</h3>
+                    <h3>8. Contact</h3>
                     <p>Email: imathhub@gmail.com</p>
                 </div>
             </div>
