Polish policy pages: improved layout, max-width container, readable typography

--- a/terms.html
+++ b/terms.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="assets/css/educational-design-system.css" />
     <link rel="stylesheet" href="assets/css/educational-overrides.css" />
     <link rel="stylesheet" href="assets/css/dropdown-nav.css" />
+    <style>
+        .policy { max-width: 940px; margin: 0 auto; padding: 1rem 0 3rem; }
+        .policy header h1 { color: #1e40af; margin-bottom: 0.25em; }
+        .policy header .text-secondary { color: #6b7280 !important; }
+        .prose { text-align: left !important; line-height: 1.75; color: #374151; }
+        .prose h2, .prose h3 { color: #1e40af; margin-top: 1.25em; margin-bottom: 0.5em; }
+        .prose p { margin: 0.5em 0 1em; }
+        .prose ul, .prose ol { list-style: disc; padding-left: 1.25em; margin: 0.25em 0 1em 0; }
+        .prose li { margin: 0.35em 0; }
+        .prose a { color: #1e40af; text-decoration: underline; }
+    </style>
 </head>
 <body class="is-preload">
     <div id="page-wrapper">
@@ -29,7 +40,7 @@
         </section>
 
         <section class="edu-section">
-            <div class="edu-container">
+            <div class="edu-container policy">
                 <header class="text-center mb-6">
                     <h1>Terms &amp; Conditions</h1>
                     <p class="text-secondary">Last updated: August 18, 2025</p>
