--- a/cookies.html
+++ b/cookies.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="assets/css/dropdown-nav.css" />
     <style>
         .policy { max-width: 940px; margin: 0 auto; padding: 1rem 0 3rem; }
-        .policy header h1 { color: #1e40af; margin-bottom: 0.25em; }
-        .policy header .text-secondary { color: #6b7280 !important; }
-        .prose { text-align: left !important; line-height: 1.75; color: #374151; }
-        .prose h2, .prose h3 { color: #1e40af; margin-top: 1.25em; margin-bottom: 0.5em; }
-        .prose p { margin: 0.5em 0 1em; }
+        .policy, .policy * { color: #374151 !important; }
+        .policy header h1,
+        .policy h1, .policy h2, .policy h3 { color: #1e40af !important; }
+        .policy .text-secondary { color: #6b7280 !important; }
+        .prose { text-align: left !important; line-height: 1.75; }
+        .prose a { color: #1e40af !important; text-decoration: underline; }
         .prose ul, .prose ol { list-style: disc; padding-left: 1.25em; margin: 0.25em 0 1em 0; }
+        .prose p { margin: 0.5em 0 1em; }
         .prose li { margin: 0.35em 0; }
-        .prose a { color: #1e40af; text-decoration: underline; }
     </style>
 </head>
 <body class="is-preload">
