--- a/grades.html
+++ b/grades.html
@@ -831,7 +831,7 @@
                 <div class="footer-section">
                     <h4>Connect</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link" title="Facebook">
+                        <a href="https://www.facebook.com/mongolpotential" class="social-link" title="Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="#" class="social-link" title="YouTube">
@@ -840,7 +840,7 @@
                         <a href="#" class="social-link" title="Twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" class="social-link" title="Instagram">
+                        <a href="https://www.instagram.com/mongolpotential" class="social-link" title="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a href="#" class="social-link" title="LinkedIn">
