Rebrand: International Math Hub -> Mongol Potential across site (HTML/JS/CSS)

--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Math Resources & Blog - International Math Hub</title>
+		<title>Math Resources & Blog - Mongol Potential</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Math tips, study guides, and practice problems from International Math Hub. Expert resources to help you master mathematics." />
+		<meta name="description" content="Math tips, study guides, and practice problems from Mongol Potential. Expert resources to help you master mathematics." />
 		<meta name="author" content="IntlMathHub Team" />
 		<link rel="stylesheet" href="assets/css/first.css" />
 		<link rel="stylesheet" href="assets/css/improvements.css" />
@@ -316,7 +316,7 @@
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
 
                 <!-- Main Navigation -->
@@ -641,7 +641,7 @@
 				<div class="footer-content">
 					<div class="footer-section">
 						<div class="footer-brand">
-							<h3>International Math Hub</h3>
+							<h3>Mongol Potential</h3>
 							<p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
 						</div>
 					</div>
@@ -699,7 +699,7 @@
 							</ul>
 						</div>
 						<div class="footer-copyright">
-							<p>&copy; 2025 International Math Hub. All rights reserved.</p>
+							<p>&copy; 2025 Mongol Potential. All rights reserved.</p>
 						</div>
 					</div>
 				</div>
