--- a/company.html
+++ b/company.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>About Us - International Math Hub</title>
+    <title>About Us - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Learn about International Math Hub's mission, team, career opportunities, and how to get in touch with us." />
+    <meta name="description" content="Learn about Mongol Potential's mission, team, career opportunities, and how to get in touch with us." />
     <meta name="author" content="IntlMathHub Team" />
     <link rel="stylesheet" href="assets/css/first.css" />
     <link rel="stylesheet" href="assets/css/improvements.css" />
@@ -488,7 +488,7 @@
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
 
                 <!-- Main Navigation -->
@@ -622,7 +622,7 @@
         <section class="company-hero">
             <div class="edu-container">
                 <h1 style="color: white !important; text-align: center !important; font-size: 3.5em; margin-bottom: 0.5em;">About Us</h1>
-                <p style="color: white !important; text-align: center !important; font-size: 1.3em; max-width: 800px; margin: 0 auto 2em; line-height: 1.6;">International Math Hub is dedicated to revolutionizing mathematics education for Mongolian students worldwide. We combine cutting-edge technology with proven pedagogical methods to create an unparalleled learning experience.</p>
+                <p style="color: white !important; text-align: center !important; font-size: 1.3em; max-width: 800px; margin: 0 auto 2em; line-height: 1.6;">Mongol Potential is dedicated to revolutionizing mathematics education for Mongolian students worldwide. We combine cutting-edge technology with proven pedagogical methods to create an unparalleled learning experience.</p>
             </div>
         </section>
 
@@ -761,7 +761,7 @@
                     <div class="edu-container">
                         <header class="text-center mb-6">
                             <h2 style="color: white !important;">Meet Our Team</h2>
-                            <p style="color: #e5e7eb !important;">The passionate educators and professionals behind International Math Hub</p>
+                            <p style="color: #e5e7eb !important;">The passionate educators and professionals behind Mongol Potential</p>
                         </header>
                         
                         <div class="team-grid">
@@ -834,7 +834,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <h3>International Math Hub</h3>
+                        <h3>Mongol Potential</h3>
                         <p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
                     </div>
                 </div>
@@ -888,7 +888,7 @@
                         </ul>
                     </div>
                     <div class="footer-copyright">
-                        <p>&copy; 2025 International Math Hub. All rights reserved.</p>
+                        <p>&copy; 2025 Mongol Potential. All rights reserved.</p>
                     </div>
                 </div>
             </div>
