--- a/exam-prep.html
+++ b/exam-prep.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Exam Prep Learning Resources - International Math Hub</title>
+    <title>Exam Prep Learning Resources - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Comprehensive exam preparation and learning resources including solutions, specialized courses, study guides, and more for mathematics education." />
@@ -771,7 +771,7 @@
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
 
                 <!-- Main Navigation -->
@@ -1094,7 +1094,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <h3>International Math Hub</h3>
+                        <h3>Mongol Potential</h3>
                         <p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
                     </div>
                 </div>
@@ -1148,7 +1148,7 @@
                         </ul>
                     </div>
                     <div class="footer-copyright">
-                        <p>&copy; 2025 International Math Hub. All rights reserved.</p>
+                        <p>&copy; 2025 Mongol Potential. All rights reserved.</p>
                     </div>
                 </div>
             </div>
