--- a/features.html
+++ b/features.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Mathematics Roadmap - International Math Hub</title>
+    <title>Mathematics Roadmap - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     		<link rel="stylesheet" href="assets/css/first.css" />
@@ -68,7 +68,7 @@
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
 
                 <!-- Main Navigation -->
@@ -432,7 +432,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <h3>International Math Hub</h3>
+                        <h3>Mongol Potential</h3>
                         <p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
                     </div>
                 </div>
@@ -490,7 +490,7 @@
                         </ul>
                     </div>
                     <div class="footer-copyright">
-                        <p>&copy; 2025 International Math Hub. All rights reserved.</p>
+                        <p>&copy; 2025 Mongol Potential. All rights reserved.</p>
                     </div>
                 </div>
             </div>
