--- a/math-courses.html
+++ b/math-courses.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Math Courses - International Math Hub</title>
+    <title>Math Courses - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Browse International Math Hub's math courses by grade and level. Elementary, middle, high school, college, and adult learning topics." />
+    <meta name="description" content="Browse Mongol Potential's math courses by grade and level. Elementary, middle, high school, college, and adult learning topics." />
     <meta name="author" content="IntlMathHub Team" />
     <link rel="stylesheet" href="assets/css/first.css" />
     <link rel="stylesheet" href="assets/css/improvements.css" />
@@ -78,7 +78,7 @@
         <section id="header">
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
                 <nav id="nav">
                     <ul>
@@ -479,7 +479,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <h3>International Math Hub</h3>
+                        <h3>Mongol Potential</h3>
                         <p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
                     </div>
                 </div>
@@ -519,7 +519,7 @@
                         </ul>
                     </div>
                     <div class="footer-copyright">
-                        <p>&copy; 2025 International Math Hub. All rights reserved.</p>
+                        <p>&copy; 2025 Mongol Potential. All rights reserved.</p>
                     </div>
                 </div>
             </div>
