--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Contact - International Math Hub</title>
+    <title>Contact - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Get in touch with International Math Hub for tutoring, support, or questions about our mathematics education services." />
+    <meta name="description" content="Get in touch with Mongol Potential for tutoring, support, or questions about our mathematics education services." />
     <meta name="author" content="IntlMathHub Team" />
     <link rel="stylesheet" href="assets/css/first.css" />
     <link rel="stylesheet" href="assets/css/auth.css" />
@@ -259,7 +259,7 @@
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
 
                 <!-- Main Navigation -->
@@ -473,7 +473,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <h3>International Math Hub</h3>
+                        <h3>Mongol Potential</h3>
                         <p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
                     </div>
                 </div>
@@ -531,7 +531,7 @@
                         </ul>
                     </div>
                     <div class="footer-copyright">
-                        <p>&copy; 2025 International Math Hub. All rights reserved.</p>
+                        <p>&copy; 2025 Mongol Potential. All rights reserved.</p>
                     </div>
                 </div>
             </div>
