--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>International Math Hub</title>
+		<title>Mongol Potential</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="A platform for mathematicians and enthusiasts to share knowledge and resources tailored for Mongolia's education system." />
@@ -134,7 +134,7 @@
 				<div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
 					<!-- Logo -->
 					<div class="logo">
-						<a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height: 60px;"></a>
+						<a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
 					</div>
 
 					<!-- Main Navigation -->
@@ -615,7 +615,7 @@
 				<div class="edu-container">
 					<header class="text-center mb-6">
 						<h2>Math tutoring for every age group & grade level</h2>
-						<p class="text-secondary" style="max-width: 600px; margin: 0 auto; text-align: center;">It is our belief at International Math Hub that everyone can learn. We offer world-class online tutoring services for students from 2nd grade through adulthood.</p>
+						<p class="text-secondary" style="max-width: 600px; margin: 0 auto; text-align: center;">It is our belief at Mongol Potential that everyone can learn. We offer world-class online tutoring services for students from 2nd grade through adulthood.</p>
 					</header>
 					
 					<div class="grade-levels">
@@ -886,7 +886,7 @@
 				<div class="section-highlight"></div>
 				<div class="content-wrapper">
 					<header>
-						<h2 class="section-title">About International Math Hub</h2>
+						<h2 class="section-title">About Mongol Potential</h2>
 					</header>
 					<p>
 						We serve Mongolian students worldwide with rigorous, caring instruction. Our tutors adapt lessons to the curriculum students already follow—AP, California middle school standards, IB, or other international programs—so they earn better grades, deepen curiosity, and build confidence. We also incorporate Mongolian culture into examples and projects to help students stay connected to their roots wherever they live. <a href="company.html" class="highlight-link">Learn more</a>.
@@ -923,7 +923,7 @@
 				<div class="footer-content">
 					<div class="footer-section">
 						<div class="footer-brand">
-							<h3>International Math Hub</h3>
+							<h3>Mongol Potential</h3>
 							<p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
 						</div>
 					</div>
@@ -981,7 +981,7 @@
 							</ul>
 						</div>
 						<div class="footer-copyright">
-							<p>&copy; 2025 International Math Hub. All rights reserved.</p>
+							<p>&copy; 2025 Mongol Potential. All rights reserved.</p>
 						</div>
 					</div>
 				</div>
