--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Privacy Policy - International Math Hub</title>
+    <title>Privacy Policy - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/first.css" />
@@ -107,7 +107,7 @@
     <div id="page-wrapper">
         <section id="header">
             <div class="header-container" style="display:flex;align-items:center;justify-content:space-between;">
-                <div class="logo"><a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height:60px;"></a></div>
+                <div class="logo"><a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height:60px;"></a></div>
                 <nav id="nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
