--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Terms of Service - International Math Hub</title>
+    <title>Terms of Service - Mongol Potential</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/first.css" />
@@ -107,7 +107,7 @@
     <div id="page-wrapper">
         <section id="header">
             <div class="header-container" style="display:flex;align-items:center;justify-content:space-between;">
-                <div class="logo"><a href="index.html"><img src="/images/logo.png" alt="International Math Hub Logo" style="max-height:60px;"></a></div>
+                <div class="logo"><a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height:60px;"></a></div>
                 <nav id="nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -128,7 +128,7 @@
                     <p class="text-secondary">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
-                    <p>Welcome to <strong>International Math Hub</strong> (“we,” “our,” or “us”). By accessing or using our website at <a href="https://imathhub.vercel.app">imathhub.vercel.app</a>, you agree to these Terms &amp; Conditions. Please read them carefully.</p>
+                    <p>Welcome to <strong>Mongol Potential</strong> (“we,” “our,” or “us”). By accessing or using our website at <a href="https://imathhub.vercel.app">imathhub.vercel.app</a>, you agree to these Terms &amp; Conditions. Please read them carefully.</p>
 
                     <h3>1. Use of Our Website</h3>
                     <ul>
@@ -151,7 +151,7 @@
 
                     <h3>4. Intellectual Property</h3>
                     <ul>
-                        <li>All content, including videos, quizzes, problem sets, and articles, is the intellectual property of International Math Hub unless otherwise credited.</li>
+                        <li>All content, including videos, quizzes, problem sets, and articles, is the intellectual property of Mongol Potential unless otherwise credited.</li>
                         <li>You may use our resources for personal, non-commercial learning.</li>
                     </ul>
 
