Home: grade cards now link to math-courses.html sections (elementary/middle/high/college/adult)

--- a/index.html
+++ b/index.html
@@ -627,40 +627,40 @@
 						</div>
 						
 						<div class="edu-grid edu-grid-4" id="gradeGrid">
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=2nd%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#elementary" class="grade-card">
 								<h4>2nd Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=3rd%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#elementary" class="grade-card">
 								<h4>3rd Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=4th%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#elementary" class="grade-card">
 								<h4>4th Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=5th%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#elementary" class="grade-card">
 								<h4>5th Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=6th%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#middle" class="grade-card">
 								<h4>6th Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=7th%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#middle" class="grade-card">
 								<h4>7th Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=8th%20Grade" class="grade-card" target="_blank">
+							<a href="math-courses.html#middle" class="grade-card">
 								<h4>8th Grade Math Tutors</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=High%20School" class="grade-card" target="_blank">
+							<a href="math-courses.html#high" class="grade-card">
 								<h4>High School Math</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=College" class="grade-card" target="_blank">
+							<a href="math-courses.html#college" class="grade-card">
 								<h4>College Math</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=Elementary" class="grade-card" target="_blank">
+							<a href="math-courses.html#elementary" class="grade-card">
 								<h4>Elementary Math</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=Adults" class="grade-card" target="_blank">
+							<a href="math-courses.html#adult" class="grade-card">
 								<h4>Adults</h4>
 							</a>
-							<a href="https://forms.gle/YOUR_FORM_ID_HERE?entry.123456789=Kids" class="grade-card" target="_blank">
+							<a href="math-courses.html#elementary" class="grade-card">
 								<h4>Math Tutors for Kids</h4>
 							</a>
 						</div>
