Brand tagline: update to 'Helping Mongol minds reach their full potential' across site and i18n

--- a/math-courses.html
+++ b/math-courses.html
@@ -480,7 +480,7 @@
                 <div class="footer-section">
                     <div class="footer-brand">
                         <h3>Mongol Potential</h3>
-                        <p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
+                        <p>Helping Mongol minds reach their full potential. Personalized tutoring and comprehensive resources.</p>
                     </div>
                 </div>
                 <div class="footer-section">
