--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					<div class="edu-container hero-content">
 						<div class="hero-text">
 							<h1 class="hero-headline">World Class Education for Mongolians</h1>
-							<h2 class="hero-main-title">Empowering Mongolian Students</h2>
+							<h2 class="hero-main-title">Helping Mongol minds reach their potential</h2>
 							<div class="hero-tagline">
 								<span class="tagline-text" id="rotating-text">Helping Your Child Succeed—Wherever You Live</span>
 							</div>
@@ -924,7 +924,7 @@
 					<div class="footer-section">
 						<div class="footer-brand">
 							<h3>Mongol Potential</h3>
-							<p>Empowering Mongolian students with world-class mathematics education. Expert tutors and personalized learning for every grade level.</p>
+							<p>Helping Mongol minds reach their full potential. Personalized tutoring and comprehensive resources.</p>
 						</div>
 					</div>
 					
