Update logo to images/mongol.png across site and favicon injector

--- a/math-courses.html
+++ b/math-courses.html
@@ -78,7 +78,7 @@
         <section id="header">
             <div class="header-container" style="display: flex; align-items: center; justify-content: space-between;">
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
+                    <a href="index.html"><img src="/images/mongol.png" alt="Mongol Potential Logo" style="max-height: 60px;"></a>
                 </div>
                 <nav id="nav">
                     <ul>
