--- a/terms.html
+++ b/terms.html
@@ -107,7 +107,7 @@
     <div id="page-wrapper">
         <section id="header">
             <div class="header-container" style="display:flex;align-items:center;justify-content:space-between;">
-                <div class="logo"><a href="index.html"><img src="/images/logo.png" alt="Mongol Potential Logo" style="max-height:60px;"></a></div>
+                <div class="logo"><a href="index.html"><img src="/images/mongol.png" alt="Mongol Potential Logo" style="max-height:60px;"></a></div>
                 <nav id="nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
