Company: use images/khas.png as Khas-Ochir Bayarjargal avatar

--- a/company.html
+++ b/company.html
@@ -702,7 +702,7 @@
                         
                         <div class="team-grid">
                             <div class="team-member">
-                                <div class="avatar">K</div>
+                                <img src="images/khas.png" alt="Khas-Ochir Bayarjargal" class="avatar" style="object-fit: cover;">
                                 <h4>Khas-Ochir Bayarjargal</h4>
                                 <div class="role">Founder</div>
                                 <p style="color: #374151 !important;">Mathematician with 5+ years of teaching experience. Passionate about mathematical discovery and leading engaging problem‑solving discussions.</p>
