Company: make team bios consistent; bullet-point achievements for Khas-Ochir and Bilegjargal

--- a/company.html
+++ b/company.html
@@ -706,9 +706,10 @@
                                 <h4>Khas-Ochir Bayarjargal</h4>
                                 <div class="role">Founder</div>
                                 <p style="color: #374151 !important;">Mathematician with 5+ years of teaching experience. Passionate about mathematical discovery and leading engaging problem‑solving discussions.</p>
-                                <p style="color: #374151 !important; margin-top: 0.75em;">
-                                    International competitions: 2 gold, 1 bronze. National Math Olympiad: 1 silver, 1 bronze.
-                                </p>
+                                <ul style="color:#374151 !important; margin-top:0.75em; padding-left:1.2em; list-style: disc;">
+                                    <li>International Math Competitions — 2× gold, 1× bronze</li>
+                                    <li>National Math Olympiad — silver, bronze</li>
+                                </ul>
                             </div>
 
                             <div class="team-member">
@@ -716,9 +717,10 @@
                                 <h4>Bilegjargal Altangerel</h4>
                                 <div class="role">Co‑Founder • Physics & Mathematics Specialist</div>
                                 <p style="color: #374151 !important;">Physics and mathematics specialist with 6+ years of teaching experience, dedicated to making science clear, practical, and inspiring for every learner.</p>
-                                <p style="color: #374151 !important; margin-top: 0.75em;">
-                                    Achievements: National Math Olympiad — silver, bronze; National Physics Olympiad — 2× bronze.
-                                </p>
+                                <ul style="color:#374151 !important; margin-top:0.75em; padding-left:1.2em; list-style: disc;">
+                                    <li>National Math Olympiad — silver, bronze</li>
+                                    <li>National Physics Olympiad — 2× bronze</li>
+                                </ul>
                             </div>
 
                             <div class="team-member">
