Math courses: restrict dark-text override to #main so hero title/description remain white and centered

--- a/math-courses.html
+++ b/math-courses.html
@@ -53,9 +53,7 @@
 
         /* Force readable dark text for all content outside the hero */
         body.courses-page #main,
-        body.courses-page #main *,
-        body.courses-page .edu-container,
-        body.courses-page .edu-container * {
+        body.courses-page #main * {
             color: #1f2937 !important;
             text-shadow: none !important;
         }
