Tutoring: stop benefit hover movement; add clear free-trial flow description and steps

--- a/tutoring.html
+++ b/tutoring.html
@@ -225,11 +225,15 @@
                 </div>
 
                 <h3>How It Works</h3>
+                <p style="margin-bottom:1rem; color:#374151;">
+                    First session is <strong>free</strong> — book a 30‑minute trial below. We’ll get to know your child, do a short diagnostic, and then
+                    discuss the plan to begin regular lessons and pick a schedule that works for you.
+                </p>
                 <ol class="steps">
-                    <li>Schedule a 30-minute session using the calendar below</li>
-                    <li>Share your specific questions or topics in advance</li>
-                    <li>Meet online with your tutor at the scheduled time</li>
-                    <li>Receive personalized instruction and guidance</li>
+                    <li>Book a free 30‑minute trial session using the calendar below</li>
+                    <li>We’ll meet, get to know your learner, and run a brief skills check</li>
+                    <li>We propose a tailored plan and agree on weekly time(s)</li>
+                    <li>Start regular lessons with clear goals and ongoing updates</li>
                 </ol>
 
                 <div class="calendly-container">
